--- a/cake-app/docker-compose.yml
+++ b/cake-app/docker-compose.yml
@@ -6,16 +6,21 @@ services:
         image: mysql:8.0
         restart: always
         volumes:
-            - mysql/data:/var/lib/mysql
+            - ./mysql/data:/var/lib/mysql
         environment: 
             MYSQL_ROOT_PASSWORD: roootpassword
             MYSQL_DATABASE: master
             MYSQL_USER: user
-            MYSQL_ROOT_PASSWORD: password
+            MYSQL_PASSWORD: password
     
     app:
         build:
             context: .
+        volumes:
+            - .:/var/www/html
+        depends_on: 
+            - db    
         container_name: cake-php-app
         image: cake-image
-        ports: 80:8888
+        ports: 
+            - 8228:80
