dockerfileにpdoのライブラリを入れる様に修正

--- a/cake-app/Dockerfile
+++ b/cake-app/Dockerfile
@@ -15,7 +15,7 @@ RUN apt-get update && apt-get install -y \
     libjpeg62-turbo-dev \
     libpng-dev \
     libzip-dev \
-    && docker-php-ext-install intl \
+    && docker-php-ext-install intl pdo_mysql \
     && rm -rf /var/lib/apt/lists/*
 
 
